--- a/webapp/src/styles/evebox-slate.scss
+++ b/webapp/src/styles/evebox-slate.scss
@@ -117,6 +117,8 @@ $evebox-info-color: #50656f;
   padding-right: 12px;
   padding-bottom: 7px;
   padding-left: 12px;
+
+  height: 34px;
 }
 
 .fa-star {
